# Nexos

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
engine/: CMakeLists.txt
engine/src/: def.h  entry.h  test.c  test.h
engine/src/core/: application.c  application.h
nexos/: CMakeLists.txt
nexos/src/: test.c
sandbox/: CMakeLists.txt
sandbox/src/: main.c  sandbox.c
